gcc/testsuite/rust/rustc/ui/issues/issue-57198.rs
mod m {
    pub fn r#for() {}
}

fn main() {
    m::for();
// { dg-error "" "" { target *-*-* } .-1 }
}

